src/objects/OnlineApplication__c.object
<CustomObject>
    <fields>
        <fullName>Experian_BizID_with_Score__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Experian BizID with Score</label>
        <referenceTo>ExperianBizID__c</referenceTo>
        <relationshipLabel>Online Applications</relationshipLabel>
        <relationshipName>Online_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Experian_Data__c</fullName>
        <description>All data from the Experian response, save the FICO score, is not currently being used and thus being stored all together here.</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Experian Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Experian_Premier_Attributes__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Experian Premier Attributes</label>
        <length>9000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Application_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Application URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_Referred_By_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner Users Contact Record who referred record</description>
        <inlineHelpText>Partner Users Contact Record who referred record</inlineHelpText>
        <label>External Referred By Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Online Applications</relationshipLabel>
        <relationshipName>Online_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F1_Account_Created__c</fullName>
        <description>Date that the Fleet One Account Number was created populated via Process Builder</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date that the F1 Account Number is created is populated via an automated process.  This is for reporting.</inlineHelpText>
        <label>F1 Account # Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F1_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>F1 Account Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>F1_Factoring_Guarantee_Amount__c</fullName>
        <label>F1 Factoring Guarantee Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F1_Factoring_Guarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>F1 Factorying Guarantee security type</description>
        <inlineHelpText>F1 Factorying Guarantee security type</inlineHelpText>
        <label>F1 Factoring Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FF_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FF #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTS_Account__c</fullName>
        <description>Used by FTS onboarding to document account numbers</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>FTS Account #</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fax #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Federal_Tax_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Your business&apos; Employer Identification Number (EIN) or business owner&apos;s social security number, if there is no EIN.</inlineHelpText>
        <label>Federal Tax ID #</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Institution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the bank you&apos;ll use to pay your Fleet One invoices.</inlineHelpText>
        <label>Financial Institution</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_One_Initiated_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fleet One Initiated Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forte_Check__c</fullName>
        <label>Forte Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credit_Decision_Engine_Check</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forte_Response_Code__c</fullName>
        <description>The response code returned from the Forte Integration</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The response code returned from the Forte Integration</inlineHelpText>
        <label>Forte Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forte_Response_Message__c</fullName>
        <description>This is the response description return from Forte.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the response description return from Forte.</inlineHelpText>
        <label>Forte Response Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Forte_Response_Type__c</fullName>
        <description>The response type returned by the Forte integration</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The response type returned by the Forte integration</inlineHelpText>
        <label>Forte Response Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fraud Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Online_Applications_Fraud_Analyst</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fraud_Credit_Line_Check__c</fullName>
        <formula>IF(Team_Drivers_Slip_Seat__c=TRUE,(Number_of_Trucks__c * 3000), (Number_of_Trucks__c * 2000))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fraud Credit Line Check</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fraud_Decision_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fraud Decision Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fraud_Decision__c</fullName>
        <inlineHelpText>For Fraud Analyst use only</inlineHelpText>
        <label>Fraud Decision</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fraud_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fraud Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fraud_Recommendation__c</fullName>
        <label>Fraud Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recommend Approve</fullName>
                </value>
                <value>
                    <fullName>Recommend Review</fullName>
                </value>
                <value>
                    <fullName>Recommend Decline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <formula>TEXT(Offer__r.Funding__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIACT_Account_Response_Code_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Account Response Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIACT_Account_Response_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Account Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIACT_Account_Response_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Account Response Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GIACT_Check__c</fullName>
        <label>GIACT Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GIACT_Response_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIACT_Response_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Response Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GIACT_Customer_Response_Code_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Customer Response Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIACT_Customer_Response_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Customer Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIACT_Customer_Response_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Customer Response Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GIACT_Verify_Response_Code_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Verify Response Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_DUNS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Global Ultimate DUNS</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_Card_Setup_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Card Setup Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_Us__c</fullName>
        <label>How Did You Hear About Us</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brochure</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Existing SFDC Record</fullName>
                </value>
                <value>
                    <fullName>External Data Source</fullName>
                </value>
                <value>
                    <fullName>Facebook/LinkedIn/Twitter</fullName>
                </value>
                <value>
                    <fullName>Internet/Website</fullName>
                </value>
                <value>
                    <fullName>Letter/Postcard</fullName>
                </value>
                <value>
                    <fullName>Magazine Ad</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Private Label</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Self Generated Source</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>TruckSign/StoreSign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IP Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_Have_Read_and_Agree__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>You must click and view the Account Terms and Conditions before proceeding.</inlineHelpText>
        <label>I Have Read and Agree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Progress_User__c</fullName>
        <description>Updated by workflow when a user checks the In Progress field.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Updated by workflow when a user checks the In Progress field.</inlineHelpText>
        <label>In Progress User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Verification_Source__c</fullName>
        <label>Individual Verification Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equifax</fullName>
                </value>
                <value>
                    <fullName>Driver’s License</fullName>
                </value>
                <value>
                    <fullName>Social Security Card</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inquiry_Address_High_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fraud Indicator returned from Experian</inlineHelpText>
        <label>Inquiry Address High Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instant_Approval__c</fullName>
        <description>Application was auto-approved by the system</description>
        <label>Instant Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Info__c</fullName>
        <description>Internal use only for Account Setup Team.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Internal use only for Account Setup Team.</inlineHelpText>
        <label>Internal Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Delivery_Method_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The address used to receive email communications for your business.</inlineHelpText>
        <label>Invoice Delivery Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invoice_Delivery_Method_Fax__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Delivery Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Invoice_Delivery_Method__c</fullName>
        <label>Invoice Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_Subtype__c</fullName>
        <label>Additional Information</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>How_Did_You_Hear_About_Us__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>American Trucker</fullName>
                </value>
                <value>
                    <fullName>AMSA</fullName>
                </value>
                <value>
                    <fullName>Automotive Fleet</fullName>
                </value>
                <value>
                    <fullName>CCJ</fullName>
                </value>
                <value>
                    <fullName>Channel Referral</fullName>
                </value>
                <value>
                    <fullName>CSN</fullName>
                </value>
                <value>
                    <fullName>CSP</fullName>
                </value>
                <value>
                    <fullName>Electronic Transaction Association</fullName>
                </value>
                <value>
                    <fullName>Fleet Owner</fullName>
                </value>
                <value>
                    <fullName>GATS</fullName>
                </value>
                <value>
                    <fullName>Great West Truck Show</fullName>
                </value>
                <value>
                    <fullName>Independent Community Bankers of America (ICBA)</fullName>
                </value>
                <value>
                    <fullName>Landline</fullName>
                </value>
                <value>
                    <fullName>MATS</fullName>
                </value>
                <value>
                    <fullName>MPACT</fullName>
                </value>
                <value>
                    <fullName>NACS</fullName>
                </value>
                <value>
                    <fullName>NACSTech</fullName>
                </value>
                <value>
                    <fullName>Nashville Chamber Directory Guide</fullName>
                </value>
                <value>
                    <fullName>National Association of Fleet Administrators (NAFA)</fullName>
                </value>
                <value>
                    <fullName>NATSO</fullName>
                </value>
                <value>
                    <fullName>NPTC</fullName>
                </value>
                <value>
                    <fullName>OTR and/or Local Fleet Referral</fullName>
                </value>
                <value>
                    <fullName>OTR and/or Local Merchant Referral</fullName>
                </value>
                <value>
                    <fullName>PACE</fullName>
                </value>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Private Label Referral</fullName>
                </value>
                <value>
                    <fullName>SEPetro</fullName>
                </value>
                <value>
                    <fullName>SIGMA</fullName>
                </value>
                <value>
                    <fullName>Sirius Radio</fullName>
                </value>
                <value>
                    <fullName>Sunoco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Online Applications</relationshipLabel>
        <relationshipName>Online_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Business_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of your business as listed on your business license or according to the Federal Government.</inlineHelpText>
        <label>Legal Business Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_of_Credit_Amount__c</fullName>
        <label>Letter of Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Letter_of_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>letter of credit security type</description>
        <label>Letter of Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_BIID_Result__c</fullName>
        <label>Lexis Nexis BIID Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_Check__c</fullName>
        <label>Lexis Nexis Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credit_Decision_Engine_Check</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_Custom_Model_Score__c</fullName>
        <label>Lexis Nexis Custom Model Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_FraudPoint_Result__c</fullName>
        <label>Lexis Nexis FraudPoint Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_FraudPoint_Score__c</fullName>
        <label>Lexis Nexis FraudPoint Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_IID_Result__c</fullName>
        <label>Lexis Nexis IID Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Check__c</fullName>
        <label>Location Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC_FF_or_DOT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MC#, FF# or DOT#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MC #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If a partner, like OOIDA, requires a membership number, put that here.</inlineHelpText>
        <label>Membership Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <description>Applicant Mobile Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NASTC_QPN_Directory__c</fullName>
        <description>Number of directories to send.</description>
        <inlineHelpText>Number of directories to send.</inlineHelpText>
        <label>NASTC/QPN Directory #</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_Parent_Company__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If a subsidiary, please provide the parent company name.</inlineHelpText>
        <label>Parent Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_ID__c</fullName>
        <formula>TEXT(Account__r.National_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Connect_Completion_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Net Connect Completion Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Connect_Error_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Net Connect Error Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Net_Connect_Error_Tag__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Net Connect Error Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Cards_Needed__c</fullName>
        <label># of Cards Needed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Drivers__c</fullName>
        <inlineHelpText>The number of people at your business that operate your business vehicles.</inlineHelpText>
        <label># of Drivers</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label># of Employees</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Payments_Negative__c</fullName>
        <label># of Payments Negative</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Payments_Slow__c</fullName>
        <label># of Payments Slow</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Trailers__c</fullName>
        <inlineHelpText>The number of trailers your business uses in its day-to-day operations.</inlineHelpText>
        <label># of Trailers</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Trucks__c</fullName>
        <inlineHelpText>The number of trucks your business uses in its day-to-day operations.</inlineHelpText>
        <label># of Trucks</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Vehicles__c</fullName>
        <inlineHelpText>The number of vehicles your business uses in its day-to-day operations.</inlineHelpText>
        <label># of Vehicles</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTR_Payment_Days__c</fullName>
        <label>OTR Payment Days</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 0</fullName>
                </value>
                <value>
                    <fullName>Net 1</fullName>
                </value>
                <value>
                    <fullName>Net 2</fullName>
                </value>
                <value>
                    <fullName>Net 3</fullName>
                </value>
                <value>
                    <fullName>Net 4</fullName>
                </value>
                <value>
                    <fullName>Net 5</fullName>
                </value>
                <value>
                    <fullName>Net 6</fullName>
                </value>
                <value>
                    <fullName>Net 7</fullName>
                </value>
                <value>
                    <fullName>Net 8</fullName>
                </value>
                <value>
                    <fullName>Net 9</fullName>
                </value>
                <value>
                    <fullName>Net 10</fullName>
                </value>
                <value>
                    <fullName>Net 11</fullName>
                </value>
                <value>
                    <fullName>Net 12</fullName>
                </value>
                <value>
                    <fullName>Net 13</fullName>
                </value>
                <value>
                    <fullName>Net 14</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 16</fullName>
                </value>
                <value>
                    <fullName>Net 17</fullName>
                </value>
                <value>
                    <fullName>Net 18</fullName>
                </value>
                <value>
                    <fullName>Net 19</fullName>
                </value>
                <value>
                    <fullName>Net 20</fullName>
                </value>
                <value>
                    <fullName>Net 21</fullName>
                </value>
                <value>
                    <fullName>Net 22</fullName>
                </value>
                <value>
                    <fullName>Net 23</fullName>
                </value>
                <value>
                    <fullName>Net 24</fullName>
                </value>
                <value>
                    <fullName>Net 25</fullName>
                </value>
                <value>
                    <fullName>Net 26</fullName>
                </value>
                <value>
                    <fullName>Net 27</fullName>
                </value>
                <value>
                    <fullName>Net 28</fullName>
                </value>
                <value>
                    <fullName>Net 29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Odometer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Current mileage reading on the odometer.</inlineHelpText>
        <label>Odometer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Credit_Review_Path__c</fullName>
        <formula>Offer__r.Credit_Review_Path__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Credit Review Path</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Name_WF_TXT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Offer Name WF TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Name__c</fullName>
        <description>Used to route 3 England Logistics offers</description>
        <formula>Offer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Name</label>
        <type>Text</type>
    </fields>
</CustomObject>